--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,13 @@ youtube-transcript-api
 langchain-ollama
 
 # For groq
-langchain_groq
+langchain-groq
 
 # For Extracting data from PDF, we will be using pdfplumber
 pdfplumber
+
+# Web Interface
+streamlit
+
+# Groq API for DeepSeek
+groq
