--- a/requirements.txt
+++ b/requirements.txt
@@ -45,8 +45,8 @@ wikipedia
 # For YouTube Chatbot
 youtube-transcript-api
 
-# For OpenAI embeddings (cloud deployment)
-langchain-openai
+# For Ollama
+langchain-ollama
 
 # For groq
 langchain-groq
